# Image-Processing-Laboratory

./: .gitignore  CMakeLists.txt  README.md  main.cpp
image-processing-library/: CMakeLists.txt
image-processing-library/include/: BinaryOp.h  Characteristics.h  Elementary.h  Frequency.h  Geometry.h  GlobalHelper.h  Histogram.h  LinearSpatial.h  Measuring.h  Noise.h  NonLinearSpatial.h  Spatial.h
image-processing-library/src/: BinaryOp.cpp  Characteristics.cpp  Elementary.cpp  Frequency.cpp  Geometry.cpp  Histogram.cpp  LinearSpatial.cpp  Measuring.cpp  Noise.cpp  NonLinearSpatial.cpp  Spatial.cpp
include/: measuring.h  noise.h
lib/: CMakeLists.txt  elementary.cpp  elementary.h  geometry.cpp  geometry.h  measuring.cpp  measuring.h  noise.cpp  noise.h
src/: main.cpp
tests/: .gitignore  CMakeLists.txt  task2_bash.ps1  task2_script.ps1  task3_script.ps1  test_binaryOp.cpp  test_elementary.cpp  test_frequency.cpp  test_geometry.cpp  test_histogram.cpp  test_linearSpatial.cpp  test_nonLinearSpatial.cpp
